Add PropTypes to components.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "webpack-dev-server --open"
   },
   "babel": {
-    "presets": ["env", "react"]
+    "presets": [
+      "env",
+      "react"
+    ]
   },
   "author": "Phuc Le",
   "license": "ISC",
@@ -24,6 +27,7 @@
   },
   "dependencies": {
     "marked": "^0.3.6",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   }
